--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles/style_1.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
 </head>
 <body>
     <h1>0din recipes</h1>
-    <a href="recipes/FriedCheese.html">Fried cheese recipe</a>
-    <a href="recipes/HowToCookAHuman.html">Human recipe</a>
-    <a href="recipes/HowToPerformGaySex.html">How to be a good christian</a>
+    <a href="recipes/FriedCheese.html">Fried cheese recipe</a><br>
+    <a href="recipes/HowToCookAHuman.html">Human recipe</a><br>
+    <a href="recipes/HowToPerformGaySex.html">How to be a good christian</a><br>
+
 </body>
 </html>
