--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Recipes</title>
 </head>
 <body>
-    <h1>0din recipes</h1>
-    <a href="recipes/FriedCheese.html">Fried cheese recipe</a><br>
-    <a href="recipes/HowToCookAHuman.html">Human recipe</a><br>
-    <a href="recipes/HowToPerformGaySex.html">How to be a good christian</a><br>
+    <h1 id="one">0din recipes</h1>
+    <div>
+        <a href="recipes/FriedCheese.html">Fried cheese recipe</a><br>
+        <a href="recipes/HowToCookAHuman.html">Human recipe</a><br>
+        <a href="recipes/HowToPerformGaySex.html">How to be a good christian</a><br>
+    </div>
 
 </body>
 </html>
