--- a/recipes/FriedCheese.html
+++ b/recipes/FriedCheese.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fch</title>
 </head>
 <body>
     <h1>Fried cheese</h1>
     <img src="../images/cheese.jpg" alt="mozzarella sticks" 
-        width="200" 
-        height="300">
+        width="500" 
+        height="200">
     <h3>Description:</h3>
     <p>You take cheese, you fry it in bread crumbs, you eat, repeat.</p>
 
